[gd_scene load_steps=2 format=3 uid="uid://knofx7nqajqr"]

[ext_resource type="Script" path="res://addons/PlanetEditor/subeditors/curve_editor.gd" id="1_4nxkg"]

[node name="CurveEditor" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4nxkg")

[node name="LineContainer" type="Node2D" parent="."]

[connection signal="resized" from="." to="." method="_on_resized"]
